# PyTenNet

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: reproduce.yml
notebooks/: bose_hubbard.ipynb  demo.ipynb  tfim_phase_transition.ipynb
proofs/: proof_18_idmrg_thermodynamic.py  proof_19_tdvp_ground_state.py  proof_21_fermionic_mps.py
pytennet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tensornet/: __init__.py
tensornet/algorithms/: __init__.py  dmrg.py  fermionic.py  idmrg.py  lanczos.py  tdvp.py  tebd.py
tensornet/core/: __init__.py  contractions.py  decompositions.py
tensornet/mps/: __init__.py  hamiltonians.py  mpo.py  mps.py  states.py
