[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytennet"
version = "0.2.0"
description = "Tensor Networks in Pure PyTorch - MPS, MPO, DMRG, TEBD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tigantic Labs"}
]
keywords = ["tensor-networks", "dmrg", "mps", "quantum", "pytorch", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/tigantic/PyTenNet"
Repository = "https://github.com/tigantic/PyTenNet"
Issues = "https://github.com/tigantic/PyTenNet/issues"

[tool.setuptools.packages.find]
include = ["tensornet*"]
